--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -123,12 +123,9 @@
     <!-- App details: open play store link if app is user installed -->
     <string name="app_play_store">Google Play</string>
 
-        <!-- Battery saver -->
-    <string name="battery_saver_is_enabled">Battery saver is enabled</string>
-
-        <!-- Battery temp -->
-    <string name="battery_temp_title">Battery temperature</string>
-    <string name="battery_temp_summary">Tap to switch scale</string>
+    <!-- Battery stats reset -->
+    <string name="battery_stats_reset">Reset stats</string>
+    <string name="battery_stats_message">Battery history stats are going to be reset</string>
 
     <!-- Smart charging -->
     <string name="smart_charging_title">Smart Charging</string>
