--- a/res/values/nezuko_config.xml
+++ b/res/values/nezuko_config.xml
@@ -15,4 +15,6 @@
     <!-- Whether to show min refresh rate in display settings -->
     <bool name="config_show_min_refresh_rate_switch">false</bool>
 
+   <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">false</bool>
 </resources>
