Aosp Ambient music: allow to pulse on new tracks [2/2]
Change-Id: Ie40955b574722782e01153a9f4434be296a8d5d3

--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -144,4 +144,9 @@
     <string name="double_tap_title">Double tap</string>
     <string name="doze_double_tap_title">Double tap to check phone</string>
     <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
+
+    <!-- Pulse on new track -->
+    <string name="pulse_on_new_tracks_title">Ambient Music Ticker anzeigen</string>
+    <string name="pulse_on_new_tracks_summary">Ambient Display anzeigen, wenn ein neuer Songtitel abgespielt wird. Die Titelinformationen doppelt antippen, um zum nächsten Titel zu springen.</string>
+    <string name="pulse_on_new_tracks_soli_summary">Ambient Display anzeigen, wenn ein neuer Songtitel abgespielt wird.</string>
 </resources>
