--- a/res/xml/double_tap_ambient_screen_settings.xml
+++ b/res/xml/double_tap_ambient_screen_settings.xml
@@ -23,7 +23,7 @@
         app:animation="@raw/gesture_ambient_tap"
         app:preview="@drawable/gesture_ambient_tap" />
 
-    <com.ssos.support.preferences.SystemSettingSwitchPreference
+    <com.nezuko.support.preferences.SystemSettingSwitchPreference
         android:key="doze_trigger_doubletap"
         android:defaultValue="false"
         android:title="@string/doze_double_tap_title"
