--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -124,8 +124,9 @@
     <string name="app_play_store">Google Play</string>
 
     <!-- Battery stats reset -->
-    <string name="battery_stats_reset">Reset stats</string>
-    <string name="battery_stats_message">Battery history stats are going to be reset</string>
+    <string name="battery_stats_reset">Clear usage data?</string>
+    <string name="battery_stats_message">Battery usage data will be lost</string>
+    <string name="battery_stats_clear">@string/proxy_clear_text</string>
 
     <!-- Smart charging -->
     <string name="smart_charging_title">Smart Charging</string>
