Settings: Smart Charging (2/4)
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: Sagarrokade006 <sagarrokade006@gmail.com>

--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -21,4 +21,9 @@
     <string name="nezuko_battery_type_title">Battery</string>
     <string name="nezuko_screen_title">Screen</string>
 
+    <!-- Smart charging -->
+    <string name="smart_charging_title">Smart Charging</string>
+    <string name="smart_charging_summary">Set maximum charging level</string>
+    <string name="smart_charging_switch_title">Use Smart charging</string>
+    <string name="smart_charging_level_title">Trigger level</string>
 </resources>
