Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie: a66601a

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d

--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -139,4 +139,9 @@
     <!-- Smart Charging indication -->
     <string name="smart_charge_indication_title">Smart charging indication</string>
     <string name="smart_charge_indication_summary">Show whether the device is smart charging in settings and in the lockscreen</string>
+
+    <!-- Doze on double tap -->
+    <string name="double_tap_title">Double tap</string>
+    <string name="doze_double_tap_title">Double tap to check phone</string>
+    <string name="doze_double_tap_summary">Pulse notifications by a double tap</string>
 </resources>
