--- a/res/values/nezuko_config.xml
+++ b/res/values/nezuko_config.xml
@@ -16,5 +16,5 @@
     <bool name="config_show_min_refresh_rate_switch">false</bool>
 
    <!-- Smart Charging -->
-    <bool name="config_supportSmartCharging">false</bool>
+    <bool name="config_supportSmartCharging">true</bool>
 </resources>
