Settings: Add package name to installed app details

--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -117,4 +117,7 @@
     </plurals>
     <string name="keywords_applock_settings">applock, applocker, app lock, app locker</string>
 
+    <!-- Manage applications, package string displayed in app snippet -->
+    <string name="packagename_text"><xliff:g id="package_name">%1$s</xliff:g></string>
+
 </resources>
