--- a/res/drawable/ic_settings_system_dashboard_white_alt.xml
+++ b/res/drawable/ic_settings_system_dashboard_white_alt.xml
@@ -14,11 +14,17 @@
   limitations under the License.
   -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
+        android:width="24.0dp"
+        android:height="24.0dp"
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#000000"
-        android:pathData="M16,20H8V6H16M16.67,4H15V2H9V4H7.33A1.33,1.33 0 0,0 6,5.33V20.67C6,21.4 6.6,22 7.33,22H16.67A1.33,1.33 0 0,0 18,20.67V5.33C18,4.6 17.4,4 16.67,4Z" />
+        android:fillColor="?android:attr/colorAccent"
+        android:pathData="M11,7h2v2h-2z"/>
+    <path
+        android:fillColor="?android:attr/colorAccent"
+        android:pathData="M11,11h2v6h-2z"/>
+    <path
+        android:fillColor="?android:attr/colorAccent"
+        android:pathData="M12,2C6.48,2 2,6.48 2,12c0,5.52 4.48,10 10,10s10,-4.48 10,-10C22,6.48 17.52,2 12,2zM12,20c-4.41,0 -8,-3.59 -8,-8c0,-4.41 3.59,-8 8,-8s8,3.59 8,8C20,16.41 16.41,20 12,20z"/>
 </vector>
