--- a/res/drawable/nez_cardview_bg_middle_ripple.xml
+++ b/res/drawable/nez_cardview_bg_middle_ripple.xml
@@ -16,12 +16,18 @@
 * limitations under the License.
 */
 -->
+<inset xmlns:android="http://schemas.android.com/apk/res/android"
+    android:insetBottom="-2dp"
+    android:insetTop="-2dp"
+    >
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
 		android:color="?android:attr/colorControlHighlight">
 		<item android:id="@android:id/mask">
 			<shape android:shape="rectangle">
-				<solid android:color="@color/nez_cardview" />
+    			<stroke android:color="@color/nez_cardview" android:width="1dp" />
+				<solid android:color="@android:color/transparent" />
 			</shape>
 		</item>
 		<item android:drawable="@drawable/nez_cardview_bg_middle" />
 </ripple>
+</inset>
