--- a/res/drawable/nez_cardview_bg_single_ripple.xml
+++ b/res/drawable/nez_cardview_bg_single_ripple.xml
@@ -20,7 +20,8 @@
 		android:color="?android:attr/colorControlHighlight">
 		<item android:id="@android:id/mask">
 			<shape android:shape="rectangle">
-				<solid android:color="@color/nez_cardview"/>
+				<solid android:color="@android:color/transparent"/>
+		    	<stroke android:color="@color/nez_cardview" android:width="1dp" />
 				<corners android:topLeftRadius="@dimen/nez_cardview_radius" android:topRightRadius="@dimen/nez_cardview_radius" android:bottomLeftRadius="@dimen/nez_cardview_radius" android:bottomRightRadius="@dimen/nez_cardview_radius" />
 			</shape>
 		</item>
