--- a/res/drawable/nez_cardview_bg_top_rippled.xml
+++ b/res/drawable/nez_cardview_bg_top_rippled.xml
@@ -24,12 +24,10 @@
 
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
-            <stroke android:color="@color/nez_cardview" android:width="1dp" />
+            <stroke android:color="@android:color/transparent" android:width="1dp" />
             <solid android:color="@android:color/transparent" />
             <corners android:topLeftRadius="@dimen/nez_cardview_radius" android:topRightRadius="@dimen/nez_cardview_radius" />
         </shape>
     </item>
-
-    <item android:drawable="@drawable/nez_cardview_bg_top" />
 </ripple>
 </inset>
