Add framework to set dark mode to the new preview
Note: Make sure you add @color/settingsHeaderColor and @color/nav_bg_accent from Settings and ShapeShifter respectively

--- a/res/xml/dark_mode_settings.xml
+++ b/res/xml/dark_mode_settings.xml
@@ -20,8 +20,11 @@
     android:title="@string/dark_ui_mode"
     settings:keywords="@string/keywords_dark_ui_mode">
 
-    <ListPreference
+    <com.android.settingslib.widget.LayoutPreference
        android:layout="@layout/dark_mode_preview"
+       android:title="@string/dark_ui_title"
+       android:key="dark_ui_activated"
+       settings:controller="com.android.settings.display.darkmode.DarkModeActivationPreferenceController"
        android:selectable="false" />
 
     <com.android.settingslib.widget.LayoutPreference
