--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -135,4 +135,8 @@
     <string name="smart_charging_level_title">Stop trigger level</string>
     <string name="smart_charging_resume_level_title">Start trigger level</string>
     <string name="smart_charging_footer">Smart Charging allows you to set maximum charging level to extend the lifespan of your battery</string>
+
+    <!-- Smart Charging indication -->
+    <string name="smart_charge_indication_title">Smart charging indication</string>
+    <string name="smart_charge_indication_summary">Show whether the device is smart charging in settings and in the lockscreen</string>
 </resources>
