--- a/res/layout/settings_homepage_container.xml
+++ b/res/layout/settings_homepage_container.xml
@@ -61,18 +61,37 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"/>
 
+   <LinearLayout 
+    android:layout_width="match_parent"
+    android:layout_gravity="top"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1" />  
+
+    <ImageView
+        android:id="@+id/account_avatar"
+        android:layout_marginEnd="4dp"
+        android:paddingTop="11dp"
+        android:layout_width="@dimen/search_bar_avatar_width"
+        android:layout_height="@dimen/search_bar_height"
+        android:contentDescription="@string/search_bar_account_avatar_content_description"/>
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top|end"
                 android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_homepage_search"
                 app:layout_collapseMode="pin"
                 android:id="@+id/search_action_bar"
                 android:paddingRight="15dp"
-                android:paddingTop="15dp"
+                android:paddingTop="13dp"
                 android:contentDescription="TODO" />
 
+   </LinearLayout>
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
