Screen Off FOD (2/2)
Co-authored-by: Sherif Rahim <sherifrahim2001@gmail.com>

--- a/res/values/nezuko_strings.xml
+++ b/res/values/nezuko_strings.xml
@@ -118,5 +118,8 @@
     <string name="keywords_applock_settings">applock, applocker, app lock, app locker</string>
 
     <string name="nezuko_version_title">Nezuko version</string>
-    
+
+    <!-- Screen off fod -->
+    <string name="fod_gesture_title">Screen off fingerprint</string>
+    <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>    
 </resources>
