--- a/res/values/arrow_strings.xml
+++ b/res/values/arrow_strings.xml
@@ -19,6 +19,7 @@
     <string name="device_info_protected_single_press">Tap to show info</string>
 
     <!-- ArrowOS Installation Stats -->
+    <string name="arrow_version">Radiant version</string>
     <string name="arrow_stats_title">ArrowOS Stats</string>
     <string name="arrow_stats_summary">Just counting how many devices we run on</string>
 </resources>
